syntax = "proto3";

package sdc.biceps;

option java_package = "org.somda.sdc.proto.model.biceps";
option java_outer_classname = "AbstractComplexDeviceComponentStateType";

import "sdc/biceps/abstractdevicecomponentstate.proto";

message AbstractComplexDeviceComponentState {
  AbstractDeviceComponentState abstract_device_component_state = 1;
}
